logos responsive max-width 576px

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1641,6 +1641,7 @@ body {
     }
   }
   .logos {
+    padding-bottom: 51px;
     &__container {
       padding: 0 20px;
     }
@@ -1722,6 +1723,9 @@ body {
       margin-top: 6px;
       margin-bottom: 12px;
     }
+  }
+  .logos {
+    padding-bottom: 57px;
   }
   .footer {
     &__info {
