--- a/styles/main.css
+++ b/styles/main.css
@@ -1078,8 +1078,10 @@ body {
     margin-left: 0;
     margin-top: 5px; }
 
-  .logos__container {
-    padding: 0 20px; }
+  .logos {
+    padding-bottom: 51px; }
+    .logos__container {
+      padding: 0 20px; }
 
   .footer__container {
     padding: 0 20px; }
@@ -1130,6 +1132,9 @@ body {
     text-align: center;
     margin-top: 6px;
     margin-bottom: 12px; }
+
+  .logos {
+    padding-bottom: 57px; }
 
   .footer__info {
     font-size: 13px; }
