--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1219,6 +1219,7 @@ body {
     &__wrapper {
       width: auto;
     }
+
     .navbar-collapse {
       position: absolute;
       left: -20px;
@@ -1228,9 +1229,11 @@ body {
       background-color: rgba(248, 249, 250, 0.53);
       z-index: 100;
     }
+
     .navbar {
       position: relative;
     }
+
     .nav-item {
       line-height: 30px;
     }
@@ -1409,6 +1412,7 @@ body {
     &__row {
       width: inherit;
     }
+
     &__column:first-child {
       width: 280px;
     }
@@ -1441,6 +1445,7 @@ body {
 
 @media (max-width: 576px) {
   .top-banner {
+    height: 70px;
     &__container {
       padding: 0 20px;
     }
@@ -1466,6 +1471,7 @@ body {
     &__logo {
       font-size: 23px;
     }
+
     .navbar-collapse {
       top: 53px;
     }
@@ -1502,6 +1508,7 @@ body {
 
     .benefits {
       margin-bottom: -40px;
+
       &__content {
         height: auto;
         flex-direction: column;
@@ -1548,6 +1555,7 @@ body {
 
       &__item:first-child {
         background-color: #fee3ece3;
+        margin-bottom: 22px;
       }
 
       &__item:nth-child(2) {
@@ -1601,6 +1609,7 @@ body {
     &__text {
       font-size: 13px;
     }
+
     &__container {
       padding: 0 20px;
     }
@@ -1610,9 +1619,11 @@ body {
       padding: 0 20px;
       bottom: 127px;
     }
+
     &__content {
       margin-top: 50px;
     }
+
     &__title {
       margin-bottom: 0;
     }
@@ -1622,17 +1633,21 @@ body {
         height: auto;
         padding: 0 20px;
       }
+
       &__title {
         margin-top: 45px;
         font-size: 20px;
       }
+
       &__text {
         font-size: 12px;
         margin-bottom: 23px;
       }
+
       &__form input[type=text] {
         width: 100%;
       }
+
       &__form input[type=submit] {
         width: 100%;
         margin-left: 0;
@@ -1642,41 +1657,85 @@ body {
   }
   .logos {
     padding-bottom: 51px;
+
     &__container {
       padding: 0 20px;
     }
   }
   .footer {
+    &__title {
+      margin-bottom: 5px;
+      font-size: 18px;
+    }
+
+    &__info {
+      font-size: 11px;
+      line-height: 22px;
+      margin-bottom: 11px;
+    }
+
+    &__contacts {
+      font-size: 11px;
+      line-height: 24px;
+    }
+
+    &__link {
+      font-size: 12px;
+      line-height: 23px;
+    }
+
     &__container {
       padding: 0 20px;
     }
+
     &__content {
       padding: 0 20px;
       align-items: flex-start;
+      height: 750px;
     }
+
     &__menu {
       display: none;
     }
+
     &__row {
       display: flex;
       flex-direction: column;
     }
+
     &__column:first-child {
       width: auto;
       height: auto;
     }
+
     &__column:nth-child(2) {
       width: auto;
       height: 280px;
       padding-top: 15px;
     }
+
     &__row:nth-child(2) {
       position: relative;
-      bottom: 69px;
+      bottom: 133px;
     }
+
     &__copyright {
-      font-size: 13px;
+      font-size: 12px;
       margin-top: 0;
+      margin-bottom: 25px;
+    }
+
+    .fa-facebook, .fa-twitter, .fa-rss, .fa-google-plus, .fa-pinterest-p, .fa-vimeo {
+      font-size: 13px;
+    }
+
+    &__socials {
+      font-size: 12px;
+      line-height: 20px;
+    }
+
+    &__contain:nth-child(2) {
+      margin-top: 22px;
     }
   }
 }
@@ -1694,9 +1753,11 @@ body {
         justify-content: center;
         align-items: center;
       }
+
       &__item:first-child {
         background-color: #f9236f3d;
       }
+
       &__item:nth-child(2) {
         background-color: #0062cc59;
       }
@@ -1728,7 +1789,7 @@ body {
     padding-bottom: 57px;
   }
   .footer {
-    &__info {
+    /*&__info {
       font-size: 13px;
     }
     &__contacts {
@@ -1743,7 +1804,7 @@ body {
     }
     &__copyright {
       font-size: 11px;
-    }
+    }*/
   }
 }
 
