--- a/styles/main.css
+++ b/styles/main.css
@@ -965,10 +965,12 @@ body {
     .footer__menu-list {
       width: 100%; } }
 @media (max-width: 576px) {
-  .top-banner__container {
-    padding: 0 20px; }
-  .top-banner__text {
-    font-size: 14px; }
+  .top-banner {
+    height: 70px; }
+    .top-banner__container {
+      padding: 0 20px; }
+    .top-banner__text {
+      font-size: 14px; }
 
   .meStore__container {
     padding: 0 20px; }
@@ -1022,7 +1024,8 @@ body {
   .promotion .banner__btn {
     font-size: 17px; }
   .promotion .banner__item:first-child {
-    background-color: #fee3ece3; }
+    background-color: #fee3ece3;
+    margin-bottom: 22px; }
   .promotion .banner__item:nth-child(2) {
     background-color: #F2F3F4; }
   .promotion .banner__img {
@@ -1083,11 +1086,25 @@ body {
     .logos__container {
       padding: 0 20px; }
 
+  .footer__title {
+    margin-bottom: 5px;
+    font-size: 18px; }
+  .footer__info {
+    font-size: 11px;
+    line-height: 22px;
+    margin-bottom: 11px; }
+  .footer__contacts {
+    font-size: 11px;
+    line-height: 24px; }
+  .footer__link {
+    font-size: 12px;
+    line-height: 23px; }
   .footer__container {
     padding: 0 20px; }
   .footer__content {
     padding: 0 20px;
-    align-items: flex-start; }
+    align-items: flex-start;
+    height: 750px; }
   .footer__menu {
     display: none; }
   .footer__row {
@@ -1102,10 +1119,18 @@ body {
     padding-top: 15px; }
   .footer__row:nth-child(2) {
     position: relative;
-    bottom: 69px; }
+    bottom: 133px; }
   .footer__copyright {
-    font-size: 13px;
-    margin-top: 0; } }
+    font-size: 12px;
+    margin-top: 0;
+    margin-bottom: 25px; }
+  .footer .fa-facebook, .footer .fa-twitter, .footer .fa-rss, .footer .fa-google-plus, .footer .fa-pinterest-p, .footer .fa-vimeo {
+    font-size: 13px; }
+  .footer__socials {
+    font-size: 12px;
+    line-height: 20px; }
+  .footer__contain:nth-child(2) {
+    margin-top: 22px; } }
 @media (max-width: 399px) {
   .promotion .banner__image {
     display: none; }
@@ -1136,16 +1161,22 @@ body {
   .logos {
     padding-bottom: 57px; }
 
-  .footer__info {
-    font-size: 13px; }
-  .footer__contacts {
-    font-size: 12px; }
-  .footer__link {
-    font-size: 13px;
-    line-height: 30px; }
-  .footer__socials {
-    font-size: 13px; }
-  .footer__copyright {
-    font-size: 11px; } }
+  .footer {
+    /*&__info {
+      font-size: 13px;
+    }
+    &__contacts {
+      font-size: 12px;
+    }
+    &__link {
+      font-size: 13px;
+      line-height: 30px;
+    }
+    &__socials {
+      font-size: 13px;
+    }
+    &__copyright {
+      font-size: 11px;
+    }*/ } }
 
 /*# sourceMappingURL=main.css.map */
