--- a/scss/main.scss
+++ b/scss/main.scss
@@ -108,6 +108,8 @@ body {
       font-size: 16px;
       font-weight: 700;
     }
+    &__link:hover {
+    }
   }
 
   .navbar {
@@ -125,6 +127,9 @@ body {
   .nav-link {
     padding-bottom: 0;
     padding-top: 0;
+  }
+
+  .nav-link:hover {
   }
 
   .navbar-collapse {
@@ -1133,17 +1138,24 @@ body {
       }
 
       &__item {
-        height: 294px;
+        height: 292px;
         background-color: white;
-        border: 1px solid #80808024;
       }
 
       &__item:first-child {
         margin-right: 30px;
+        background-color: #fee3ece3;
+      }
+
+      &__item:nth-child(2) {
+        background-color: #F2F3F4;
       }
 
       &__wrapper {
         margin-top: 40px;
+      }
+      &__img {
+        background-color: #ffffff;
       }
     }
 
@@ -1223,7 +1235,7 @@ body {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .top-banner {
     height: 65px;
   }
@@ -1327,10 +1339,17 @@ body {
       &__item {
         margin: 0 auto;
         width: 100%;
+        height: 293px;
       }
 
       &__item:first-child {
         margin-bottom: 30px;
+        background-color: #ffffff;
+        border: 1px solid #fee3ece3;
+      }
+      &__item:nth-child(2) {
+        background-color: #ffffff;
+        border: 1px solid #F2F3F4;
       }
     }
   }
