--- a/styles/main.css
+++ b/styles/main.css
@@ -788,13 +788,17 @@ body {
     opacity: 0.3;
     height: fit-content; }
   .promotion .banner__item {
-    height: 294px;
-    background-color: white;
-    border: 1px solid #80808024; }
+    height: 292px;
+    background-color: white; }
   .promotion .banner__item:first-child {
-    margin-right: 30px; }
+    margin-right: 30px;
+    background-color: #fee3ece3; }
+  .promotion .banner__item:nth-child(2) {
+    background-color: #F2F3F4; }
   .promotion .banner__wrapper {
     margin-top: 40px; }
+  .promotion .banner__img {
+    background-color: #ffffff; }
   .promotion .products {
     margin-top: 90px; }
     .promotion .products__item:nth-child(3) {
@@ -839,7 +843,7 @@ body {
       line-height: 32px; }
     .footer__copyright {
       margin-bottom: 40px; } }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .top-banner {
     height: 65px; }
 
@@ -900,9 +904,15 @@ body {
         align-content: center; }
       .promotion .banner__item {
         margin: 0 auto;
-        width: 100%; }
+        width: 100%;
+        height: 293px; }
       .promotion .banner__item:first-child {
-        margin-bottom: 30px; }
+        margin-bottom: 30px;
+        background-color: #ffffff;
+        border: 1px solid #fee3ece3; }
+      .promotion .banner__item:nth-child(2) {
+        background-color: #ffffff;
+        border: 1px solid #F2F3F4; }
 
   .latest-news {
     height: auto; }
