--- a/scss/main.scss
+++ b/scss/main.scss
@@ -101,6 +101,9 @@ body {
     font-weight: 400;
     padding-bottom: 5px;
   }
+  .fa:hover {
+    transform: scale(1.4, 1.4);
+  }
 
   .top-menu {
     &__link {
@@ -130,6 +133,8 @@ body {
   }
 
   .nav-link:hover {
+    transform: scale(1.2, 1.2);
+    color: #1874d0;
   }
 
   .navbar-collapse {
@@ -143,6 +148,7 @@ body {
   background-blend-mode: overlay;
   background-size: cover;
   margin-top: -121px;
+  overflow: hidden;
 
   &__container {
     width: 1171px;
@@ -989,7 +995,9 @@ body {
     .benefits {
       &__content {
         width: 100%;
+        justify-content: space-evenly;
       }
+
     }
 
     .banner {
@@ -1122,11 +1130,11 @@ body {
 
     .benefits {
       &__title {
-        font-size: 27px;
+        font-size: 24px;
       }
 
       &__details {
-        font-size: 14px;
+        font-size: 13px;
       }
     }
 
@@ -1304,13 +1312,24 @@ body {
     .benefits {
       height: auto;
 
+      &__content {
+      }
+
+      &__item {
+        width: 132px;
+        margin-right: 40px;
+      }
+      &__item:nth-child(3) {
+        margin-right: 0;
+      }
+
       &__icon {
         width: 115px;
         height: 115px;
       }
 
       &__title {
-        font-size: 20px;
+        font-size: 18px;
       }
 
       &__details {
@@ -1372,6 +1391,7 @@ body {
     &__item {
       width: 100%;
       margin: 15px 0 20px 0;
+      max-width: 550px;
     }
 
     &__item:last-child {
@@ -1574,6 +1594,7 @@ body {
 
       &__item {
         height: 200px;
+        margin-right: 0;
       }
 
       &__title {
