--- a/scss/main.scss
+++ b/scss/main.scss
@@ -100,6 +100,7 @@ body {
     font-size: 18px;
     font-weight: 400;
     padding-bottom: 5px;
+    cursor: pointer;
   }
   .fa:hover {
     transform: scale(1.4, 1.4);
