--- a/styles/main.css
+++ b/styles/main.css
@@ -15,11 +15,16 @@ body {
     margin: 0 auto;
     display: flex;
     flex-direction: row;
-    align-items: center; }
+    align-items: center;
+    justify-content: space-between; }
   .top-banner__text {
     color: #ffffff;
     font-size: 20px;
     font-weight: 700; }
+  .top-banner .fa-times {
+    background-color: #ffffff;
+    padding: 11px 13px;
+    border-radius: 50%; }
 
 .meStore {
   height: 121px;
@@ -295,7 +300,8 @@ body {
       margin: 0 auto;
       display: flex;
       flex-direction: row;
-      justify-content: space-between; }
+      justify-content: space-between;
+      padding-left: 22px; }
     .promotion .products__item {
       width: 249px;
       height: 415px;
@@ -633,12 +639,14 @@ body {
     color: #ffffff;
     font-size: 16px;
     line-height: 40px;
-    font-weight: 500; }
+    font-weight: 500;
+    cursor: pointer; }
   .footer__socials {
     color: #ffffff;
     font-size: 14px;
     font-weight: 400;
-    line-height: 30px; }
+    line-height: 30px;
+    cursor: pointer; }
   .footer__wrapper {
     display: flex;
     flex-direction: row;
@@ -660,7 +668,10 @@ body {
     font-size: 25px;
     font-weight: 400;
     line-height: 21.56px;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    cursor: pointer; }
+  .footer .fa {
+    cursor: pointer; }
   .footer__payments span {
     margin-right: 8px; }
   .footer__menu {
@@ -777,6 +788,8 @@ body {
 @media (max-width: 992px) {
   .top-banner__text {
     font-size: 17px; }
+  .top-banner .fa-times {
+    padding: 8px 10px; }
 
   .meStore .navbar-collapse {
     justify-content: center; }
@@ -1015,6 +1028,8 @@ body {
 @media (max-width: 576px) {
   .top-banner {
     height: 70px; }
+    .top-banner .fa-times {
+      padding: 6px 8px; }
     .top-banner__container {
       padding: 0 20px; }
     .top-banner__text {
@@ -1134,7 +1149,7 @@ body {
   .summer-sale .subscribe__form input[type=submit] {
     width: 100%;
     margin-left: 0;
-    margin-top: 6px; }
+    margin-top: 7px; }
 
   .logos {
     padding-bottom: 51px; }
@@ -1173,8 +1188,7 @@ body {
     height: 280px;
     padding-top: 15px; }
   .footer__row:nth-child(2) {
-    position: relative;
-    bottom: 133px; }
+    margin-top: -110px; }
   .footer__copyright {
     font-size: 12px;
     margin-top: 0;
@@ -1187,6 +1201,9 @@ body {
   .footer__contain:nth-child(2) {
     margin-top: 22px; } }
 @media (max-width: 399px) {
+  .top-banner .fa-times {
+    padding: 3px 5px; }
+
   .promotion .banner__image {
     display: none; }
   .promotion .banner__item {
