--- a/scss/main.scss
+++ b/scss/main.scss
@@ -407,16 +407,16 @@ body {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      padding-left: 22px;
     }
 
     &__item {
       width: 249px;
       height: 415px;
-      display: flex;
+      display: flex !important;
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
+      text-align: center;
     }
 
     &__name {
@@ -424,6 +424,7 @@ body {
       font-size: 18px;
       font-weight: 700;
       line-height: 27px;
+      margin-top: 15px;
     }
 
     &__brand {
@@ -432,8 +433,13 @@ body {
     }
 
     &__rate {
-      width: 90px;
       height: 14px;
+    }
+    .slick-arrow::before {
+      color: #f92357;
+    }
+    .slick-dots {
+      bottom: -80px;
     }
 
     .fa {
@@ -1025,14 +1031,9 @@ body {
     }
 
     .products {
-      width: 100%;
-
+      width: auto;
       &__content {
         width: 100%;
-      }
-
-      &__item:nth-child(4) {
-        display: none;
       }
     }
   }
@@ -1189,11 +1190,17 @@ body {
       margin-top: 90px;
 
       &__item:nth-child(3) {
-        display: none;
+      }
+
+      &__item {
+        display: flex;
       }
 
       &__content {
-        justify-content: space-evenly;
+        max-width: 750px;
+      }
+      .slick-dots {
+        bottom: -45px;
       }
     }
   }
@@ -1201,7 +1208,7 @@ body {
     height: 2130px;
 
     &__heading {
-      margin-top: 90px;
+      margin-top: 75px;
     }
   }
   .latest-news {
@@ -1676,6 +1683,13 @@ body {
 
       &__subtitle {
         font-size: 14px;
+      }
+
+      &__content {
+        max-width: 320px;
+      }
+      &__rate {
+        width: auto;
       }
     }
   }
